--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "express.js starter template app",
   "main": "index.js",
   "scripts": {
-    "test": "./node_modules/mocha/bin/mocha --exit --reporter dot \"test/**/*_test.js\""
+    "test": "NODE_ENV=test ./node_modules/mocha/bin/mocha --exit --reporter dot \"test/requests_test.js\"",
+    "test_rewire": "NODE_ENV=test ./node_modules/mocha/bin/mocha --exit --reporter dot \"test/rewire_test.js\""
   },
   "keywords": [
     "express"
@@ -17,6 +18,7 @@
   "devDependencies": {
     "chai": "^4.2.0",
     "chai-http": "^4.2.0",
-    "mocha": "^5.2.0"
+    "mocha": "^5.2.0",
+    "rewire": "^4.0.1"
   }
 }
