--- a/package.json
+++ b/package.json
@@ -4,8 +4,9 @@
   "description": "express.js starter template app",
   "main": "index.js",
   "scripts": {
-    "test": "NODE_ENV=test ./node_modules/mocha/bin/mocha --exit --reporter dot \"test/requests_test.js\"",
-    "test_rewire": "NODE_ENV=test ./node_modules/mocha/bin/mocha --exit --reporter dot \"test/rewire_test.js\""
+    "test": "NODE_ENV=test ./node_modules/mocha/bin/mocha --exit --reporter dot \"test/requests_test.js\" ",
+    "test_rewire": "NODE_ENV=test ./node_modules/mocha/bin/mocha --exit --reporter dot \"test/rewire_test.js\"",
+    "test_proxyquire": "NODE_ENV=test ./node_modules/mocha/bin/mocha --exit --reporter dot \"test/proxyquire_test.js\""
   },
   "keywords": [
     "express"
@@ -19,6 +20,7 @@
     "chai": "^4.2.0",
     "chai-http": "^4.2.0",
     "mocha": "^5.2.0",
+    "proxyquire": "^2.1.0",
     "rewire": "^4.0.1"
   }
 }
